# assistant-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_client.py
src/: main.py
src/auth/: oauth_gate.py
src/auth/providers/: google_provider.py  provider.py  provider_registry.py
src/auth/tokens/: auth_token.py  google_token.py  token.py
src/mcp_tools/: auth_tool_app.py
src/mcp_tools/google/: calendar.py
src/utils/: decorators.py  errors.py
